--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Virtual Garden</a>
+                            <a class="nav-link" href="virtual.html">Virtual Garden</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Resources</a>
@@ -142,16 +142,17 @@
                 <div class="col-lg-3 mt-5">
                     <h4 class="fw-bold">Information</h4>
                     <ul class="list-unstyled">
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li> <a class="" href="about.html">About</a></li>
+                        <li><a class="" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mt-5">
                     <h4 class="fw-bold">Explore</h4>
                     <ul class="list-unstyled">
-                        <li>Mindfulness</li>
-                        <li>Virtual Garden</li>
-                        <li>Resources</li>
+                        <li><a class="" href="breathing.html">Breathing</a></li>
+                        <li><a class="" href="meditation.html">Meditation</a></li>
+                        <li><a class="" href="virtual.html">Virtual Garden</a></li>
+                        <li><a class="" href="#">Resources</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mt-5">
