--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Virtual Garden</a>
+                            <a class="nav-link" href="virtual.html">Virtual Garden</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Resources</a>
@@ -127,16 +127,17 @@
                 <div class="col-lg-3 mt-5">
                     <h4 class="fw-bold">Information</h4>
                     <ul class="list-unstyled">
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li> <a class="" href="about.html">About</a></li>
+                        <li><a class="" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mt-5">
                     <h4 class="fw-bold">Explore</h4>
                     <ul class="list-unstyled">
-                        <li>Mindfulness</li>
-                        <li>Virtual Garden</li>
-                        <li>Resources</li>
+                        <li><a class="" href="breathing.html">Breathing</a></li>
+                        <li><a class="" href="meditation.html">Meditation</a></li>
+                        <li><a class="" href="virtual.html">Virtual Garden</a></li>
+                        <li><a class="" href="#">Resources</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mt-5">
@@ -154,7 +155,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous">
