--- a/breathing.html
+++ b/breathing.html
@@ -47,7 +47,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Virtual Garden</a>
+                            <a class="nav-link" href="virtual.html">Virtual Garden</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Resources</a>
@@ -152,7 +152,7 @@
                                         present moment, reducing anxiety, and enhancing overall mindfulness, thereby
                                         improving emotional and mental well-being.</p>
                                     <button class="btn btn-dark m-auto" data-bs-toggle="modal"
-                                    data-bs-target="#round">Start Session</button>
+                                        data-bs-target="#round">Start Session</button>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                     <div class="modal-body">
                         <div class="d-flex justify-content-end">
                             <a type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
+                                <img src="./assets/images/close.png" width="30" />
                             </a>
                         </div>
                         <h3 class="mb-5 text-center">Deep Calm</h3>
@@ -187,7 +187,7 @@
                     <div class="modal-body">
                         <div class="d-flex justify-content-end">
                             <a type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
+                                <img src="./assets/images/close.png" width="30" />
                             </a>
                         </div>
                         <h3 class="mb-5 text-center">Box</h3>
@@ -205,7 +205,7 @@
                     <div class="modal-body">
                         <div class="d-flex justify-content-end">
                             <a type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
+                                <img src="./assets/images/close.png" width="30" />
                             </a>
                         </div>
                         <h3 class="mb-5 text-center">Awake</h3>
@@ -231,16 +231,17 @@
                 <div class="col-lg-3 mt-5">
                     <h4 class="fw-bold">Information</h4>
                     <ul class="list-unstyled">
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li> <a class="" href="about.html">About</a></li>
+                        <li><a class="" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mt-5">
                     <h4 class="fw-bold">Explore</h4>
                     <ul class="list-unstyled">
-                        <li>Mindfulness</li>
-                        <li>Virtual Garden</li>
-                        <li>Resources</li>
+                        <li><a class="" href="breathing.html">Breathing</a></li>
+                        <li><a class="" href="meditation.html">Meditation</a></li>
+                        <li><a class="" href="virtual.html">Virtual Garden</a></li>
+                        <li><a class="" href="#">Resources</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mt-5">
