--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Virtual Garden</a>
+                            <a class="nav-link" href="virtual.html">Virtual Garden</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Resources</a>
@@ -81,7 +81,8 @@
                 <div class="col-lg-6">
                     <div class="card text-center p-4">
                         <img class="ms-auto me-auto mb-5" width="88" src="./assets/images/home-section_1-icon_1.png" />
-                        <p class="mb-5">Meditation is a gateway to inner peace, offering a unique space to pause, breathe, and
+                        <p class="mb-5">Meditation is a gateway to inner peace, offering a unique space to pause,
+                            breathe, and
                             reconnect with oneself. This ancient practice reduces stress, enhances focus, and promotes
                             emotional well-being, making it essential for navigating today's fast-paced world. Embrace
                             meditation as a daily ritual to cultivate a deeper sense of clarity, calmness, and balance
@@ -92,7 +93,8 @@
                 <div class="col-lg-6">
                     <div class="card text-center p-4">
                         <img class="ms-auto me-auto mb-5" width="88" src="./assets/images/home-section_1-icon_2.png" />
-                        <p class="mb-5">Breathing exercises are a powerful tool for managing stress and improving mental clarity. By
+                        <p class="mb-5">Breathing exercises are a powerful tool for managing stress and improving mental
+                            clarity. By
                             focusing on controlled, mindful breathing, they help calm the mind, reduce anxiety, and
                             enhance overall emotional well-being. Simple yet effective, these exercises are an essential
                             part of daily self-care, promoting a sense of inner peace and balance.</p>
@@ -113,7 +115,8 @@
                     <img width="100%" src="./assets/images/home-section_2-img_1.png" />
                 </div>
                 <div class="col-lg-6 my-auto p-5">
-                    <p class="mb-5">Explore our Virtual Garden, a tranquil space on our mindfulness website where floating
+                    <p class="mb-5">Explore our Virtual Garden, a tranquil space on our mindfulness website where
+                        floating
                         butterflies represent community members in peaceful activities. Hovering over each butterfly
                         reveals their mindfulness journey, fostering a sense of community without overcomplicating the
                         page. This serene and simple feature unites and inspires, celebrating our shared path to
@@ -154,16 +157,17 @@
                 <div class="col-lg-3 mt-5">
                     <h4 class="fw-bold">Information</h4>
                     <ul class="list-unstyled">
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li> <a class="" href="about.html">About</a></li>
+                        <li><a class="" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mt-5">
                     <h4 class="fw-bold">Explore</h4>
                     <ul class="list-unstyled">
-                        <li>Mindfulness</li>
-                        <li>Virtual Garden</li>
-                        <li>Resources</li>
+                        <li><a class="" href="breathing.html">Breathing</a></li>
+                        <li><a class="" href="meditation.html">Meditation</a></li>
+                        <li><a class="" href="virtual.html">Virtual Garden</a></li>
+                        <li><a class="" href="#">Resources</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mt-5">
